# PokeClone2

./: .gitignore  .textparser.py.swp  CMakeLists.txt  LICENSE  README.md  TODO.txt  boost.cmake  compilar.sh  cross_compile_win.sh  house  instrucoes.txt  macros.cmake  map1  output.txt  parsed.txt  sources.cmake  teste.cmake  textparser.py
CMakeInclude/: FindSDL2.cmake  FindSDL2_image.cmake
Contents/: house  house.json  input.lua  keys.lua  playerInput.lua  test.lua  tiledmap.json  tiledmap.lua  tiledmap.tmx
Contents/MainGame/: enemy.json  house.json  map0.json  player.json  tiledmap.json
Contents/MainGame/actors/: enemy0.json  player.json
Contents/MainGame/maps/: map0.json  map1.json
Contents/MainGame/objects/: door0.json  key0.json
Contents/MainGame/objects/doors/: door0.json
Contents/MainGame/objects/keys/: key0.json
Contents/MainGame/objects/teleporters/: tele0.json  tele1.json
Contents/MainGame/scripts/: RandomWalk.lua  doorInput.lua  followPlayer.lua  messages.lua  objectInput.lua  playerInput.lua  randomInput.lua  teleporterInput.lua
Contents/MainGame/worlds/: world0.json
Contents/PokeClone/: pokemon.json  pokemonList.json  tilemap.map
Contents/rpgsprites1/: url
src/: Engine.cpp  Engine.h  Main.cpp  files.txt  gSettings.h  gSystems.h  swig_interface.i
src/DebugGames/: MouseTest.cpp  PhysicsTest.cpp  RectsTest.cpp  RectsTest.h
src/DebugGames/Objects/: CommandTextChanger.cpp  CommandTextChanger.h  DummyCommand.cpp  DummyCommand.h  DummyGameObject.cpp  ObjRect.h
src/Engine/: Engine.cpp  Engine.h
src/Engine/assets/: Font.cpp  Font.h  Sound.cpp  Text.cpp  Text.h  Texture.cpp  Texture.h
src/Engine/debuggames/: ButtonTest.cpp  PhysicsTest.h  ScriptTest.cpp  ScriptTest.h  SoundTest.cpp  SpriteSheetTest.cpp  SpriteSheetTest.h  TextTest.cpp
src/Engine/game/: Factory.cpp
src/Engine/game/commands/: changeGame.cpp
src/Engine/game/components/: cGraphic.h  cInput.h  cPhysics.h
src/Engine/game/main/: MainGame.cpp  MainGame.h
src/Engine/graphics/: Drawer.cpp  Drawer.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteSheet.cpp  SpriteSheet.h  Tilemap.cpp  Tilemap.h  Window.cpp  Window.h
src/Engine/gui/: Button.cpp  Button.h
src/Engine/interfaces/: iAsset.h  iCommand.h  iComponent.h  iGame.h  iGameObject.h  iInputHandler.h  iSubject.h  iSystem.h
src/Engine/io/: FileLoader.cpp  FileLoader.h
src/Engine/math/: Vector2D.h
src/Engine/physics/: Circle.h  Rect.h
src/Engine/scripting/: Lua_Wrapper.cpp  Lua_Wrapper.h  sysInput_Wrapper.cpp  sysInput_Wrapper.h  sysPhysics_Wrapper.cpp  sysPhysics_Wrapper.h
src/Engine/systems/: sysGraphics.cpp  sysGraphics.h  sysInput.cpp  sysInput.h  sysPhysics.cpp  sysPhysics.h  sysScripting.cpp  sysScripting.h  sysSound.h
src/Engine/util/: Logger.cpp  Logger.h  uRandom.cpp  uTime.cpp  uTime.h
src/Tests/: Physics_Test.cpp
src/assets/: Script.cpp  Script.h  Sound.h  Text.cpp  Text.h  Texture.cpp  Texture.h
src/components/: ComponentMediator.cpp  ComponentMediator.h  MessageSender.cpp  MessageSender.h  cAudible.h  cClickable.h  cGraphic.cpp  cGraphic.h  cInput.cpp  cInput.h  cMovable.h  cPositionable.h  cRenderable.h
src/components/Graphics/: cTextures.cpp  cTextures.h
src/debuggames/: BackgroundScrolling.cpp  BackgroundScrolling.h  ButtonTest.cpp  ButtonTest.h  MouseTest.cpp  MouseTest.h  PhysicsTest.cpp  Rects.cpp  Rects.h  ScriptTest.cpp  SoundTest.cpp  SoundTest.h  SpriteSheetTest.cpp  SpriteSheetTest.h  TextTest.cpp  TextTest.h  TextureTest.cpp  TextureTest.h  TileMapTest.cpp  TileMapTest.h
src/debuggames/BackgroundScrolling/: Zone.cpp  Zone.h  cZoneInput.cpp  cZoneInput.h
src/debuggames/Objects/: DummyGameObject.cpp  DummyGameObject.h  ObjRect.cpp  RenderMe.cpp  RenderMe.h  Tilemap.cpp  Tilemap.h
src/debuggames/TileMapTest/: Tilemap.cpp  Tilemap.h  cTileMapInput.cpp  cTileMapInput.h
src/game/: Factory.cpp  Factory.h  Game.cpp  Game.h  Main.cpp
src/game/commands/: exitGame.cpp  exitGame.h
src/game/components/: Component.h  ComponentMediator.cpp  ComponentMediator.h  cGraphic.h  cInput.h  cPhysics.h
src/game/main/: AnimationController.cpp  AnimationController.h  MainGame.cpp  MainGame.h  Player.cpp  Player.h  PlayerInput.cpp  PlayerInput.h  PlayerPhysics.cpp  PlayerPhysics.h  ScriptedInput.cpp  ScriptedInput.h
src/game/main/components/: AnimationController.cpp  AnimationController.h  DecorationGraphic.cpp  DecorationGraphic.h  DoorPhysics.cpp  DoorPhysics.h  EnemyPhysics.cpp  EnemyPhysics.h  ObjectInput.cpp  ObjectInput.h  ObjectPhysics.cpp  ObjectPhysics.h  PlayerAnimation.cpp  PlayerAnimation.h  PlayerInput.cpp  PlayerInput.h  PlayerPhysics.cpp  PlayerPhysics.h  ScriptedInput.cpp  ScriptedInput.h  TeleporterPhysics.cpp  TeleporterPhysics.h  TrapPhysics.cpp  TrapPhysics.h
src/game/main/factories/: ActorsFactory.cpp  ActorsFactory.h  IteractiveFactory.cpp  (+1 more)
src/game/menu/: MenuGame.cpp  MenuGame.h
src/game/objects/: GameObject.cpp  GameObject.h  World.cpp  World.h
src/graphics/: Color.h  Drawer.cpp  Drawer.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteSheet.cpp  SpriteSheet.h  Tilemap.cpp  Tilemap.h  Window.cpp  Window.h
src/graphics/extra/: Tilemap.cpp  Tilemap.h
src/gui/: Button.cpp  Button.h
src/interfaces/: iAsset.h  iButton.h  iCommand.h  iComponent.h  iComponentMediator.h  iGame.h  iGameObject.h  iObject.h  iObserver.h  iScene.h  iSubject.h
src/io/: CacheHelper.cpp  CacheHelper.h  FileLoader.cpp  FileLoader.h  Logger.cpp  Logger.h
src/math/: Vector2D.cpp  Vector2D.h
src/physics/: Circle.h  Rect.h
src/scripting/: Logger_Wrapper.cpp  Logger_Wrapper.h  Lua_Wrapper.cpp  Lua_Wrapper.h  sysPhysics_Wrapper.cpp  sysPhysics_Wrapper.h
src/systems/: iSystem.cpp  iSystem.h  sysFlags.h  sysGraphics.cpp  sysGraphics.h  sysInput.cpp  sysInput.h  sysPhysics.cpp  sysPhysics.h  sysScripting.cpp  sysScripting.h  sysSound.cpp  sysSound.h
src/util/: Logger.cpp  Logger.h  uRandom.h  uTime.cpp  uTime.h
(+37 files in other folders)
